# mcp-nltk

./: nltk_mcp.py  pyproject.toml
